--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-
-
+  <div class="w50">
+    <app-post *ngFor="let post of posts" [post]="post"></app-post>
+  </div>
 
   <router-outlet>
 
