--- a/src/app/components/full-post/full-post.component.html
+++ b/src/app/components/full-post/full-post.component.html
@@ -1,1 +1,6 @@
-<p>full-post works!</p>
+<div >
+  <h2>{{chosenPost.title}}</h2>
+  <p>user id - {{chosenPost.userId}}</p>
+  <p>post id - {{chosenPost.id}}</p>
+  <h4>{{chosenPost.body}}</h4>
+</div>
